jsoup changelog

Release 1.16.1 [PENDING]
  * Bugfix: Corrected support for ruby elements (<ruby>, <rp>, <rt>, and <rtc>) to current spec.
    <https://github.com/jhy/jsoup/issues/1294>

  * Bugfix: When using Node.before(node) or Node.after(node), if the incoming node was a sibling of the context node,
    the incoming node may be inserted into the wrong relative location.
    <https://github.com/jhy/jsoup/issues/1898>

Release 1.15.4 [18-Feb-2023]
  * Improvement: added the ability to escape CSS selectors (tags, IDs, classes) to match elements that don't follow
    regular CSS syntax. For example, to match by classname <p class="one.two">, use document.select("p.one\\.two");
    <https://github.com/jhy/jsoup/issues/838>

  * Improvement: when pretty-printing, wrap text that follows a <br> tag.
    <https://github.com/jhy/jsoup/issues/1858>

  * Improvement: when pretty-printing, normalize newlines that follow self-closing tags in custom tags.
    <https://github.com/jhy/jsoup/issues/1852>

  * Improvement: when pretty-printing, collapse non-significant whitespace between a block and an inline tag.
    <https://github.com/jhy/jsoup/issues/1802>

  * Improvement: in Element#forEach and Node#forEachNode, use java.util.function.Consumer instead of the previous
    Android compatibility shim org.jsoup.helper.Consumer. Subsequently, the latter has been deprecated.
    <https://github.com/jhy/jsoup/pull/1870>

  * Improvement: added a new method Document#forms(), to conveniently retrieve a List<FormElement> containing the <form>
    elements in a document.

  * Improvement: added a new method Document#expectForm(query), to find the first matching FormElement, or blow up
    trying.
    
  * Bugfix: URLs containing characters such as [ and ] were not escaped correctly, and would throw a
    MalformedURLException when fetched.
    <https://github.com/jhy/jsoup/issues/1873>
